--- a/WorkingNotes/ResourceList.Rmd
+++ b/WorkingNotes/ResourceList.Rmd
@@ -124,3 +124,8 @@ http://learning.blogs.nytimes.com/2010/08/23/teaching-with-infographics-places-t
 [PCAST Big Data report](http://www.whitehouse.gov/sites/default/files/microsites/ostp/PCAST/pcast_big_data_and_privacy_-_may_2014.pdf) about privacy, mainly.  [Another PCAST report](http://www.whitehouse.gov/sites/default/files/docs/big_data_privacy_report_5.1.14_final_print.pdf) about opportunities with big data.
 
 A radio show about [data science, "still sexy?"](http://www.information-management.com/pdfs/DMRadio-04-03-14_DataScience.mp3)
+
+## Landsat data
+
+See [this blog](http://dankelley.github.io/r/2014/07/01/landsat.html)
+
