--- a/ReOrganizedJune10/Logistics/TestHandingIn.Rmd
+++ b/ReOrganizedJune10/Logistics/TestHandingIn.Rmd
@@ -5,14 +5,20 @@ date: "August 7, 2014"
 output: html_document
 ---
 
+```{r include=FALSE}
+# require(base64enc)
+```
+
 This document is testing methods for posting both the HTML and the RMD documents on RPubs.
 
 It's based on the software posted [here](http://rstudio-pubs-static.s3.amazonaws.com/15314_85b9a1d206f54dbe9d5180bd851a0049.html).
 
 ```{r}
 attachFile <- function(file){
-  myrmd = base64enc::dataURI(file = file, mime = 'text/rmd')
-  dl_link = paste0("<a href='%s' target='_blank' download='",
+  myrmd <- base64enc::dataURI(file = file, mime = mime::guess_type(file)) 
+ # mime = 'text/rmd')
+  
+  dl_link <- paste0("<a href='%s' target='_blank' download='",
                    basename(file),"'> &#8658; ",file,"</a>  ")
   cat(sprintf(dl_link, myrmd))
 }
@@ -37,5 +43,25 @@ attachFile("XLSXfile.xlsx")
 This is the one I want to use ... multiple files:
 
 ```{r echo=FALSE,results='asis'}
-attachFiles("TestHandingIn.Rmd","XLSXfile.xlsx","../TopicList.Rmd")
+attachFiles("TestHandingIn.Rmd","XLSXfile.xlsx",
+            "../TopicList.Rmd") #, "TestHandingIn.html")
+```
+
+## Uploading to Dropbox
+
+1. A bash script <https://github.com/andreafabrizi/Dropbox-Uploader>
+
+## Firebase REST API
+
+Sample commands: 
+
+Google "firebase rest api"
+
+* Upload: 
+```{r}
+ curl -X PUT -d '{ "mindoisawesome": { "name": "Mindo Turing and some more and \nMindo Turing and some more and \n", "birthday": "June 23, 1912" } }' https://dcf-course.firebaseio.com/rest/quickstart/users.json
+```
+* Retrieve: 
+```
+curl https://dcf-course.firebaseio.com/rest/anobel/assignment1.json
 ```
